--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,9 @@
     { "src": "app.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "app.py" }
+    { "src": "/convert", "dest": "app.py" }
   ],
+  "env": {
+    "FLASK_ENV": "production"
+  }
 }
