--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,17 @@
+
 {
-  "version": 2,
-  "builds": [
-    { "src": "app.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/convert", "dest": "app.py" }
-  ],
-  "env": {
-    "FLASK_ENV": "production"
-  }
+    "version":2,
+    "builds": [
+        {
+            "src":"./index.py",
+            "use": "@vercel/python",
+            "config":{"runtime":"python3.8"}
+        }
+    ],
+    "routes": [
+        {
+            "src":"/(.*)",
+            "dest":"/"
+        }
+    ]
 }
